[package]
name = "try-ref"
version = "0.1.0"
edition = "2021"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
description = "AsRef/AsMut version of TryFrom"
license = "MIT"
repository = "https://github.com/HalsekiRaika/try-ref.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1"
thiserror = "1"